--- a/templates/index.html
+++ b/templates/index.html
@@ -137,7 +137,7 @@
             </div>
         </div>
 
-        <!-- 내 정보 등록하기 모달창 display:none으로 가려놨습니다 button이 slide 뒤로 이동된 부분 수정필요-->
+        <!-- 내 정보 등록하기 모달창 display:none으로 가려놨습니다 button이 slide 뒤로 이동된 부분 수정필요 1231232-->
         <div class="myPost">
             <img src="../static/logo.png" alt="#" class="logo">
             <div class="name_give">
