--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./main.css">
     <script src="./main.js"></script>
 
-    <!-- swiperJS -->
+    <!-- swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
