add onclick event

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
                 <!-- container 하나로 변경, membercards에 swiper-slide class동시부여, swiper 계층구조유지를 위해서 container > wrapper > slide로 감싸주었음 -->
                 <div class="swiper container">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide memberCards" id="memberCards">
+                        <div class="swiper-slide memberCards" id="memberCards" onclick="window.open('sub.html')">
                             <a class="circle">
                                 <img class="circle" src="../static/img1.png">
                             </a>
@@ -72,7 +72,7 @@
                                 https://pokemonkorea.co.kr/
                             </p>
                         </div>
-                        <div class="swiper-slide memberCards" id="memberCards">
+                        <div class="swiper-slide memberCards" id="memberCards" onclick="window.open('sub.html')">
                             <a class="circle">
                                 <img class="circle" src="../static/img1.png">
                             </a>
@@ -92,7 +92,7 @@
                                 https://pokemonkorea.co.kr/
                             </p>
                         </div>
-                        <div class="swiper-slide memberCards" id="memberCards">
+                        <div class="swiper-slide memberCards" id="memberCards" onclick="window.open('sub.html')">
                             <a class="circle">
                                 <img class="circle" src="../static/img1.png">
                             </a>
@@ -112,7 +112,7 @@
                                 https://pokemonkorea.co.kr/
                             </p>
                         </div>
-                        <div class="swiper-slide memberCards" id="memberCards">
+                        <div class="swiper-slide memberCards" id="memberCards" onclick="window.open('sub.html')">
                             <a class="circle">
                                 <img class="circle" src="../static/img1.png">
                             </a>
