--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
     <main>
         <div>
             <div class="intro">
-                <h1>우리는 모두 P!</h1>
+                <h1>우리는 모두 P!!</h1>
                 <p>P(인식형)무계획들이 모여서 만드는 자기소개 웹사이트에 오신걸 환영합니다!</p>
             </div>
             <div class="intro2">
